Setting product image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,55 @@
 <body>
     <main>
         <div class="container">
-            
+            <ul>
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/1.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/1b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-details">
+                            <span class="bg-type-1">-50%</span>
+                            <span class="bg-type-2">Sostenibilità</span>
+                        </span>
+                    </div>
+                    <div class="product-info">
+
+                    </div>
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
+                    </div>
+                    <div class="product-info">
+
+                    </div>
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
+                    </div>
+                    <div class="product-info">
+
+                    </div>
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
+                    </div>
+                    <div class="product-info">
+
+                    </div>
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
+                    </div>
+                    <div class="product-info">
+
+                    </div>
+                </li>
+
+            </ul>
         </div>
     </main>
 </body>
