--- a/index.html
+++ b/index.html
@@ -22,42 +22,15 @@
                         </span>
                     </div>
                     <div class="product-info">
-
+                        <div class="brand">Levi's</div>
+                        <div class="article-name">Relaxed Fit Tee Unisex</div>
+                        <div class="price">
+                            <span class="actual-price">14,99€</span>
+                            <span class="old-price">29,99€</span>
+                        </div>
                     </div>
                 </li>
-                <li class="product">
-                    <div class="product-image">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
-                    </div>
-                    <div class="product-info">
-
-                    </div>
-                </li>
-                <li class="product">
-                    <div class="product-image">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
-                    </div>
-                    <div class="product-info">
-
-                    </div>
-                </li>
-                <li class="product">
-                    <div class="product-image">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
-                    </div>
-                    <div class="product-info">
-
-                    </div>
-                </li>
-                <li class="product">
-                    <div class="product-image">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptates beatae maiores laborum atque illo veniam laboriosam! Blanditiis consequatur enim maiores reprehenderit modi quo quae consectetur corporis, quia dignissimos ea?
-                    </div>
-                    <div class="product-info">
-
-                    </div>
-                </li>
-
+                
             </ul>
         </div>
     </main>
