--- a/index.html
+++ b/index.html
@@ -30,7 +30,97 @@
                         </div>
                     </div>
                 </li>
-                
+
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/2.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/2b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-details">
+                            <span class="bg-type-1">-30%</span>
+                        </span>
+                    </div>
+                    <div class="product-info">
+                        <div class="brand">Guess</div>
+                        <div class="article-name">Roses Tee</div>
+                        <div class="price">
+                            <span class="actual-price">20,99€</span>
+                            <span class="old-price">29,99€</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/3.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/3b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-details">
+                            <span class="bg-type-1">-30%</span>
+                        </span>
+                    </div>
+                    <div class="product-info">
+                        <div class="brand">Come Zucchero Filato</div>
+                        <div class="article-name">Voglia di colori pastello</div>
+                        <div class="price">
+                            <span class="actual-price">129,99€</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/4.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/4b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-details">
+                            <span class="bg-type-1">-50%</span>
+                            <span class="bg-type-2">Sostenibilità</span>
+                        </span>
+                    </div>
+                    <div class="product-info">
+                        <div class="brand">Levi's</div>
+                        <div class="article-name">Tee Unisex</div>
+                        <div class="price">
+                            <span class="actual-price">14,99€</span>
+                            <span class="old-price">29,99€</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/5.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/5b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                    </div>
+                    <div class="product-info">
+                        <div class="brand">Maya Deluxe</div>
+                        <div class="article-name">Stripe Bodice</div>
+                        <div class="price">
+                            <span class="actual-price">99,99€</span>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="product">
+                    <div class="product-image">
+                        <img class="default-state" src="./img/6.webp" alt="Product 1">
+                        <img class="hover-state" src="./img/6b.webp" alt="Product 1b">
+                        <span class="heart">&hearts;</span>
+                        <span class="product-details">
+                            <span class="bg-type-2">Sostenibilità</span>
+                        </span>
+                    </div>
+                    <div class="product-info">
+                        <div class="brand">Esprit</div>
+                        <div class="article-name">Maglione black</div>
+                        <div class="price">
+                            <span class="actual-price">29,99€</span>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </main>
